added button to remove badges from page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <div class="heading">
     <h1>BADGE ME, BABY!!</h1>
   </div>
-  <button type="button" class="btn btn-info btn-lg col-md-6 col-md-offset-3">Dance Party</button><br>
+  <div><button type="button" class="btn btn-info btn-lg col-md-6 col-md-offset-3">Dance Party</button></div>
+  <div><button type="button" class="btn btn-danger btn-lg col-md-6 col-md-offset-3 hidden byeBtn">BYEEEEEE</button></div><br><br><br>
   <div id="badge-container"></div>
 
 </body>
